--- a/application/admin/view/layout.html
+++ b/application/admin/view/layout.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>主页</title>
+    <title>管理系统</title>
     <link rel="stylesheet" href="__STATIC__/layui/css/layui.css">
+    <script src="__STATIC__/js/jquery.js"></script>
+    <script src="__STATIC__/layui/layui.js"></script>
+    <script src="__STATIC__/js/init.js"></script>
 </head>
 
 <body class="layui-layout-body">
@@ -41,7 +44,7 @@
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                        <img src="http://placeimg.com/118/118/animals" class="layui-nav-img">安安
+                        <img src="http://placeimg.com/64/64/animals" class="layui-nav-img">安安
                     </a>
                     <dl class="layui-nav-child">
                         <dd>
@@ -62,6 +65,20 @@
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-filter="test">
+                    <li class="layui-nav-item">
+                        <a href={:url('admin/index/index')}>首页</a>
+                    </li>
+                    <li class="layui-nav-item">
+                        <a href={:url('/user')}>用户管理</a>
+                    </li>
+                    <dl class="layui-nav-child">
+                        <dd>
+                            <a href="javascript:;">列表三</a>
+                        </dd>
+                        <dd>
+                            <a href="">超链接</a>
+                        </dd>
+                    </dl>
                     <li class="layui-nav-item layui-nav-itemed">
                         <a class="" href="javascript:;">所有商品</a>
                         <dl class="layui-nav-child">
@@ -115,14 +132,6 @@
             © layui.com - 底部固定区域
         </div> -->
     </div>
-    <script src="__STATIC__/layui/layui.js"></script>
-    <script>
-        //JavaScript代码区域
-        layui.use('element', function () {
-            var element = layui.element;
-
-        });
-    </script>
 </body>
 
 </html>
