--- a/application/admin/view/layout.html
+++ b/application/admin/view/layout.html
@@ -9,42 +9,24 @@
     <script src="__STATIC__/js/jquery.js"></script>
     <script src="__STATIC__/layui/layui.js"></script>
     <script src="__STATIC__/js/init.js"></script>
+    <style>
+        li[active],dd[active] {
+            background-color: #595D69;
+        }
+        li[active] a,dd[active] a {
+            color: #fff!important;
+        }
+    </style>
 </head>
 
 <body class="layui-layout-body">
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
-            <div class="layui-logo">XX管理系统</div>
-            <!-- 头部区域（可配合layui已有的水平导航） -->
-            <ul class="layui-nav layui-layout-left">
-                <li class="layui-nav-item">
-                    <a href="">控制台</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="">商品管理</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="">用户</a>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="javascript:;">其它系统</a>
-                    <dl class="layui-nav-child">
-                        <dd>
-                            <a href="">邮件管理</a>
-                        </dd>
-                        <dd>
-                            <a href="">消息管理</a>
-                        </dd>
-                        <dd>
-                            <a href="">授权管理</a>
-                        </dd>
-                    </dl>
-                </li>
-            </ul>
+            <div class="layui-logo">仓库管理系统</div>
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
                     <a href="javascript:;">
-                        <img src="http://placeimg.com/64/64/animals" class="layui-nav-img">安安
+                        安安
                     </a>
                     <dl class="layui-nav-child">
                         <dd>
@@ -65,57 +47,24 @@
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <li class="layui-nav-item">
-                        <a href={:url('admin/index/index')}>首页</a>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href={:url('/user')}>用户管理</a>
-                    </li>
-                    <dl class="layui-nav-child">
-                        <dd>
-                            <a href="javascript:;">列表三</a>
-                        </dd>
-                        <dd>
-                            <a href="">超链接</a>
-                        </dd>
-                    </dl>
-                    <li class="layui-nav-item layui-nav-itemed">
-                        <a class="" href="javascript:;">所有商品</a>
-                        <dl class="layui-nav-child">
-                            <dd>
-                                <a href="{:url('admin/index/index')}">列表一</a>
-                            </dd>
-                            <dd>
-                                <a href="{:url('admin/index/test')}">列表二</a>
-                            </dd>
-                            <dd>
-                                <a href="javascript:;">列表三</a>
-                            </dd>
-                            <dd>
-                                <a href="">超链接</a>
-                            </dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="javascript:;">解决方案</a>
-                        <dl class="layui-nav-child">
-                            <dd>
-                                <a href="javascript:;">列表一</a>
-                            </dd>
-                            <dd>
-                                <a href="javascript:;">列表二</a>
-                            </dd>
-                            <dd>
-                                <a href="">超链接</a>
-                            </dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="">云市场</a>
-                    </li>
-                    <li class="layui-nav-item">
-                        <a href="">发布商品</a>
-                    </li>
+                    {volist name=":getMenuList()" id="menu"}
+                        {if condition="isset($menu.children)"}
+                        <li class="layui-nav-item {$menu.active?='layui-nav-itemed'}">
+                            <a class="" href="javascript:;">{$menu.title}</a>
+                            <dl class="layui-nav-child">
+                            {volist name="menu.children" id="vo"}
+                                <dd {$vo.active?='active'}>
+                                    <a href="{:url($vo.url)}">{$vo.title}</a>
+                                </dd>
+                            {/volist}
+                            </dl>
+                        </li>
+                        {else /}
+                        <li class="layui-nav-item" {$menu.active?='active'}>
+                            <a href={:url($menu.url)}>{$menu.title}</a>
+                        </li>
+                        {/if}
+                    {/volist}
                 </ul>
             </div>
         </div>
