--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -90,7 +90,7 @@
                         if(res.code == 0){
                             layer.msg(res.msg);
                         }else if(res.code == 1){
-                            location.href = res.url;
+                            //location.href = res.url;
                         }
                     },
                     error: function(err){
